// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"comment\\": \\"\\",
+ }"
`;

exports[`reducer() MOBILE/MODULES/APPROVAL/UI/LIST/INITIALIZE 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"comment\\": \\"abc\\",
+   \\"comment\\": \\"\\",
  }"
`;

exports[`reducer() MOBILE/MODULES/APPROVAL/UI/LIST/SET_COMMENT 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"comment\\": \\"\\",
+   \\"comment\\": \\"abc\\",
  }"
`;
